# intellicomp

./: .gitignore  Cargo.toml  README.md  specification.tex
intellicomp/: Cargo.toml
intellicomp-core/: Cargo.toml  spec.yaml  specification.json
intellicomp-core/src/: argument.rs  error.rs  lexer.rs  lib.rs  main.rs
intellicomp-generate/: Cargo.toml  file
intellicomp/src/: cli.rs  error.rs  lib.rs  main.rs
intellicomp/src/hooks/: bash.rs  fish.rs  mod.rs
intellicomp/src/subcommands/: autogenerate.rs  complete.rs  hook.rs  mod.rs
nuacomp/: Cargo.toml
nuacomp-core/: Cargo.toml
nuacomp-core/src/: error.rs  lib.rs  main.rs
nuacomp-spec/: Cargo.toml
nuacomp-spec/src/: lib.rs  main.rs
nuacomp/src/: cli.rs  main.rs
nuacomp/src/subcommands/: complete.rs  hook.rs
