[package]
name = "intellicomp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_yaml = "0.9.21"
intellicomp-core = { path = "../intellicomp-core/" }
itertools = "0.10.5"
directories = "5.0.1"
thiserror = "1.0.40"
git2 = "0.17.1"
shlex = "1.1.0"
